// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guide renders component 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide renders component if benchmark not ready 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Tell me how you would go about solving a work problem you have not encountered before.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide renders nothing if guide not ready 1`] = `null`;

exports[`Guide renders nothing if no competencies 1`] = `null`;

exports[`Guide renders nothing if results not ready 1`] = `null`;

exports[`Guide toggles expanded intro 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <p>
        The benefits of being extraverted are likely to include being people oriented, approachable, fun loving, energetic, fast to act, and 'full on'. In contrast someone who is introverted probably prefers to work independently, and is more likely to be dispassionate, thoughtful and measured, to think before acting and to stand back. Those who are a mixture of both (extroverted/introverted) are best described as socially skilled, quick to connect, energetic, thoughtful and action oriented, and enthusiastic.
These personality characteristics provide the basis for asking a particular sequence of questions of each of the personality 'types'. The first question is looking to confirm what they should be like; the second two explore areas of possible concern.
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide toggles question content 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they misjudge situations?
              </li>
              <li>
                Do they sometimes think and are then slow to act, or vice versa?
              </li>
              <li>
                Do they tend to 'sit on the fence'?
              </li>
            </ul>
          </div>
          <div>
            <h4>
              question_adaptability
            </h4>
            <div>
              <ul>
                <li>
                  Do they know they sometimes read situations the wrong way?
                </li>
                <li>
                  Can they provide an example?
                </li>
                <li>
                  How do they decide whether to turn up the social/action oriented side of their character, or turn it down?
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the benchmark changes 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's assessment ID changes 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Updated Name
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Updated Name badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Updated Name
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's locale changes 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's removed 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="5064521c-1028-40d4-8baa-dfeff734406f"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Engaging with People badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Engaging with People
      </h2>
      At the top level, Engaging with People (E) concerns someone’s interest, investment and comfort in developing relationships with others - customers, clients, work groups or colleagues.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Extraverted/Introverted People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              How would you describe the way in which you deal with new people in a work situation?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                How comfortable are they approaching new people (work colleagues, customers etc)?
              </li>
              <li>
                What sort of interpersonal skills do they describe using?
              </li>
              <li>
                How much energy do they invest in trying to connect with other people?
              </li>
              <li>
                Do they also hint at juggling the need to connect with new people and being able to back off when needed?
              </li>
              <li>
                Being skilled at relationship building, approaching other people but being able to step back when needed, should all be aspects of a person with a balance of extraverted and introverted characteristics.
              </li>
              <li>
                And to probe into possible issues with being extraverted/introverted.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to work with other people.) Tell me about a time when you needed to work quietly by yourself on a lengthy and important task. What were you doing and how did you feel about it?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest that you like to think things through and then act promptly) Can you describe a work situation where you leapt in too quickly or didn't move quickly enough? What did you do? What was the result?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide updates activeCompetency 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Delivering Results badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Delivering Results
      </h2>
      At the top level, Delivering Results (C) concerns work style and how someone directs their efforts and attention toward completing tasks.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Flexible People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Describe an occasion at work where you needed to react very swiftly to a rapidly moving situation.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Are they able to adapt to situations?
              </li>
              <li>
                Can they change direction of thought (and travel) quickly?
              </li>
              <li>
                Are they able to suspend the need for a plan in order to achieve a rapid solution to a problem?
              </li>
              <li>
                Being able to use a variety of different approaches, pivot and change priorities, and react in 'real time' are all aspects of a flexible character.
              </li>
              <li>
                And to probe into possible issues with being flexible.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are someone who likes to 'do their own thing'.) Describe a work situation where you needed to work closely to someone else's plan.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you tend to avoid work activities you consider unnecessary, repetitive or unpleasant.) Can you describe a time at work when in order to produce your best work you needed to perform a task in a slow and very detailed way?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide updates activeCompetency through select 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
      >
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Delivering Results badge"
          src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#FFCC3B",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/extraversion.png"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#EF615E",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/emotional_stability.png"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/openness.png"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="tab"
        style={
          Object {
            "borderTopColor": "#29B770",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
          />
          <br />
          Influencing People
        </button>
      </li>
      <li
        className="tab tabActive"
        style={
          Object {
            "borderTopColor": "black",
          }
        }
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/icons/big-five/dimensions/black/conscientiousness.png"
          />
          <br />
          Delivering Results
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Delivering Results
      </h2>
      At the top level, Delivering Results (C) concerns work style and how someone directs their efforts and attention toward completing tasks.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Flexible People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Describe an occasion at work where you needed to react very swiftly to a rapidly moving situation.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Are they able to adapt to situations?
              </li>
              <li>
                Can they change direction of thought (and travel) quickly?
              </li>
              <li>
                Are they able to suspend the need for a plan in order to achieve a rapid solution to a problem?
              </li>
              <li>
                Being able to use a variety of different approaches, pivot and change priorities, and react in 'real time' are all aspects of a flexible character.
              </li>
              <li>
                And to probe into possible issues with being flexible.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are someone who likes to 'do their own thing'.) Describe a work situation where you needed to work closely to someone else's plan.
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you tend to avoid work activities you consider unnecessary, repetitive or unpleasant.) Can you describe a time at work when in order to produce your best work you needed to perform a task in a slow and very detailed way?
            </span>
            <span
              className="questionIcon traitify--icon-fa"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\"><path fill=\\"currentColor\\" d=\\"M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
